--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.12"
+    "mongoose": "^5.9.12",
+    "slate": "^0.58.0",
+    "slate-react": "^0.58.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
