--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.12",
+    "react-dom": "^16.13.1",
     "slate": "^0.58.0",
     "slate-react": "^0.58.0"
   },
