--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "is-url": "^1.2.4",
     "material-icons": "^0.3.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
